# clap-template

./: Cargo.toml  README.md
src/: macros.rs  main.rs
src/commands/: hello.rs  mod.rs
src/utils/: table.rs
