[package]
name = "clap-template"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
license-file = "LICENSE"
authors=["Alexander Ng <alex@ayo.icu>"]
readme = "README.md"
homepage = "https://github.com/alexng353/clap-template"
repository = "https://github.com/alexng353/clap-template"
rust-version = "1.75.0"
include = ["src/**/*", "LICENSE", "README.md"]
description = "A template for creating command line applications using clap"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.1.9", features = ["derive", "suggestions"] }
clap_complete = "4.1.5"
paste = "1.0.15"
tokio = { version = "1.39.2", features = ["full"] }

# for table
box_drawing = "0.1.2"
textwrap = "0.16.1"
inquire = "0.7.5"
console = "0.15.8"
indoc = "2.0.5"
colored = "2.1.0"
